태혁 SellerDAO SellerMapper 필요한거 추가

--- a/src/main/webapp/assets/css/product/product-list.css
+++ b/src/main/webapp/assets/css/product/product-list.css
@@ -22,34 +22,35 @@ img {
   align-items: start;
   animation: lift-detail 0.1s;
   position: absolute;
-  top: 100px;
+  top: 85px;
+  left: 35px;
 }
 
-.menu-header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0; 
-  margin: 0;
-  max-width: 220px;
+.menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    min-width: 200px;
 }
 
 .welcome {
-  font-size: 14px;
-  position: relative;
-  bottom: 6px;
+   font-size: 14px;
+   text-align: left;
+    vertical-align: bottom;
 }
 
 .logout {
-  font-size: 10px;
-  color: #ffc303;
-  background-color: white;
-  border: none;
-  margin-left: auto;
-  font-weight: bold;
-  cursor: pointer;
-  position: relative;
-  bottom: 6px;
+   font-size: 10px;
+   color: #ffc303;
+   background-color: white;
+   border: none;
+   margin-left: auto;
+   font-weight: bold;
+   cursor: pointer;
+   margin-right: 24px;
+   vertical-align: bottom;
 }
 
 
