--- a/src/main/webapp/assets/css/product/product-write.css
+++ b/src/main/webapp/assets/css/product/product-write.css
@@ -20,6 +20,8 @@ h6{
   font-weight: lighter;
 }
 
+
+
 #frame {
   display: flex;
   flex-direction: column;
@@ -36,6 +38,7 @@ h6{
   margin: 28px 0;
   gap: 72px;
   padding-left: 28px;
+  position : relative;
 }
 
 #frame > .menu-wrap > span {
@@ -191,6 +194,7 @@ margin-top: 4px;
   display: flex;
   width: 100px;
   margin-left: 5px;
+  align-items: center;
 }
 
 /* image-wrap */
