--- a/src/main/webapp/assets/css/product/product-write.css
+++ b/src/main/webapp/assets/css/product/product-write.css
@@ -216,22 +216,19 @@ margin-top: 4px;
 }
 
 .main-image img{
-  position: relative;
-  width: 30px;
-  height: 30px;
-  top: 95px;
-  left: 95px;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 .sub-image div{
   position: absolute;
 }
 .sub-image img{
   position: relative;
-  top: 59px;
-  left: 59px;
-  width: 30px;
-  height: 30px;
-}
+  width: 100%;
+  height: 100%;
+} 
+
 
 .sub-image{
   display: block;
@@ -241,6 +238,7 @@ margin-top: 4px;
   border-radius: 20px;
   margin-top: 5px;
 }
+
 .sub-wrap{
   width: 464px;
   display: flex;
