--- a/src/main/webapp/assets/css/login/buyer-account-find.css
+++ b/src/main/webapp/assets/css/login/buyer-account-find.css
@@ -54,6 +54,11 @@
   display: flex;
   flex-direction: row;
 }
+.active {
+    background-color: gray; /* 활성화된 버튼의 배경색 */
+    color: white;           /* 텍스트 색상 */
+}
+
 
 /* 아이디 찾기 내용 */
 .inputbutton {
@@ -108,25 +113,6 @@ p {
 }
 
 /* 비밀번호 찾기 내용 */
-
-#check {
-  width: 10px;
-  height: 10px;
-}
-.text {
-  font-size: 11px;
-  line-height: 16px;
-}
-
-.box1{
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  padding-left: 10px;
-}
 
 .text2 {
   margin-top: 30px;
