--- a/src/main/webapp/assets/css/login/buyer-phone.css
+++ b/src/main/webapp/assets/css/login/buyer-phone.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* 로고 */
+/* 로고 css */
 #logo{
   width: 236px;
   height: 60px;
@@ -9,34 +9,21 @@
 
 .logo-box {
   display: flex;
-  align-items: center;
+  align-items: center; /* 수직 정렬 */
   justify-content: center;
   width: 464px;
   padding-bottom: 40px;
 }
 
-.new {
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 40px;
-  font-weight: bold;
-}
 
 /* input css */
 #text {
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: bold;
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 15px;
 }
 
-.text-box {
-  display: flex;
-  flex-direction: row;
-}
 
-.red {
-  color: #C83F3F;
-}
 .inputbutton {
   background-color: #ffffff;
   width: 464px;
@@ -67,21 +54,26 @@
   width: 464px; /* 입력 필드 너비 설정 */
 }
 
-/* 비밀번호 가리기 */
-.mark {
-  width:22px;
-  height: 22px;
-  flex-shrink: 0;
-  background-image: url("../../images/login/eye-off.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  cursor: pointer;
+.auth-button {
   position: absolute; /* 절대 위치 */
-  right: 29px; /* 오른쪽으로 10px 떨어지게 */
+  right: 14px; /* 오른쪽으로 10px 떨어지게 */
   top: 31px; /* 수직 중앙 정렬 */
   transform: translateY(-50%); /* 수직 중앙 정렬을 위한 변환 */
+  background-color: #ffffff;
+  padding: 8px 15px; /* 버튼의 패딩 */
+  color: #C83F3F; /* 글자 색상 */
+  border: none; /* 테두리 없음 */
+  cursor: pointer; /* 커서 포인터 */
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: bold;
 }
+
+/* 전화번호 인증요청 */
+.auth-number-container {
+  display: none; /* 기본적으로 숨김 */
+  margin-top: 10px; /* 간격 추가 */
+ }
 
 /* 회원가입 완료 버튼 */
 .login-button {
@@ -98,11 +90,12 @@
 }
 
 
-.change-passwrod-main{
+/* 전체 틀 */
+.phone-main {
   width: 464px;
   display: flex;
   flex-direction: column;
-  align-items: center; 
   justify-content: center;
+  align-items: center;
   margin: 50px auto;
 }
