--- a/src/main/webapp/assets/css/login/seller-account-find.css
+++ b/src/main/webapp/assets/css/login/seller-account-find.css
@@ -54,6 +54,10 @@
   display: flex;
   flex-direction: row;
 }
+.active {
+    background-color: gray; /* 활성화된 버튼의 배경색 */
+    color: white;           /* 텍스트 색상 */
+}
 
 /* 아이디 찾기 내용 */
 .inputbutton {
@@ -107,26 +111,19 @@ p {
   font-weight: bold;
 }
 
+ .active {
+  background-color: #828282; /* 활성화된 버튼 스타일 */
+  color: #ffffff;
+ }
+.auth-number-container {
+  display: none; /* 기본적으로 숨김 */
+  margin-top: 10px; /* 간격 추가 */
+ }
+
+
+
+
 /* 비밀번호 찾기 내용 */
-
-#check {
-  width: 10px;
-  height: 10px;
-}
-.text {
-  font-size: 11px;
-  line-height: 16px;
-}
-
-.box1{
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  padding-left: 10px;
-}
 
 .text2 {
   margin-top: 30px;
