--- a/src/main/webapp/assets/css/myhome/profile.css
+++ b/src/main/webapp/assets/css/myhome/profile.css
@@ -239,11 +239,13 @@
       box-sizing: border-box;
     }
 
+
     .default-profile-image {
       border-radius: 50%;
       width: 120px;
 	  height: 120px;
 	  margin-left: 75px;
+	  border: solid 1px #131313;
     }
 
     .id {
