--- a/src/main/webapp/assets/css/admin/admin-list.css
+++ b/src/main/webapp/assets/css/admin/admin-list.css
@@ -1,7 +1,3 @@
-announcementList.css
-
-
-
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p,
 	blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd,
 	q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
@@ -133,6 +129,7 @@ img {
 	width: 1440px;
 }
 
+
 .title {
 	margin: 43px 0 80px 0;
 	display: flex;
@@ -144,6 +141,10 @@ h1 {
 	font-size: 40px;
 	font-weight: bold;
 }
+
+
+/*****************************************/
+
 
 .new-add-btn {
 	width: 90px;
@@ -380,6 +381,10 @@ table tbody tr td .image {
 	display: flex;
 	gap: 10px;
 }
+
+
+/***************************/
+
 
 #menu-frame  {
 	display: none;
