--- a/src/main/webapp/assets/css/myhome/myhome-likes.css
+++ b/src/main/webapp/assets/css/myhome/myhome-likes.css
@@ -238,7 +238,7 @@ footer {
 	justify-content: space-between;
 	width: 1200px;
 	margin: 0 auto;
-	padding: 20px 0;
+	padding: 150px 0 0 0;
 }
 
 .footer-section {
