월요일이라니

--- a/src/main/webapp/assets/css/member/member-seller-join.css
+++ b/src/main/webapp/assets/css/member/member-seller-join.css
@@ -87,7 +87,7 @@
   width:22px;
   height: 22px;
   flex-shrink: 0;
-  background-image: url("../../images/login/eye-off.svg");
+  background-image: url("../../images/member/eye-off.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
