--- a/src/main/webapp/assets/css/member/member-login.css
+++ b/src/main/webapp/assets/css/member/member-login.css
@@ -158,6 +158,7 @@
   font-size: 14px;
   color: #131313;
   text-decoration: none;
+  background-color: transparent;
 }
 
 .box4{
@@ -242,6 +243,7 @@
   font-size: 14px;
   color: #828282;
   text-decoration: none;
+  background-color: transparent;
 }
 .text1{
   font-size: 14px;
