--- a/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
@@ -330,7 +330,7 @@
         justify-content: space-between;
         width: 1200px;
         margin: 0 auto;
-        padding: 20px 0;
+        padding: 150px 0 0 0;
     }
 
     .footer-section {
