--- a/src/main/webapp/assets/css/admin/admin-banner-update.css
+++ b/src/main/webapp/assets/css/admin/admin-banner-update.css
@@ -17,7 +17,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p,
 
 body {
     line-height: 1;
-    font-family: "Spoqa Han Sans Neo", sans-serif; 
+    font-family: "Spoqa Han Sans Neo", sans-serif; /* Keep only one body style */
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup,
@@ -252,12 +252,12 @@ input[type="date"] {
 .file-upload-group {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     gap: 20px; 
 }
 
 input[type="file"] {
-    width: 707px; 
+    width: 707px;
     height: 60px;
     padding: 17px 17px 30px 17px;
     border-radius: 20px;
@@ -266,6 +266,10 @@ input[type="file"] {
 }
 
 input[type="radio"] {
+    width: 20px;
+    height: 20px; 
+}
+input[type="checkbox"] {
     width: 20px;
     height: 20px; 
 }
@@ -286,7 +290,7 @@ button:hover {
     display: flex;
     flex-direction: row;
     justify-content: center; 
-    margin-top: 100px;
+    margin-top: 100px; 
 }
 
 .button-submit,
