--- a/src/main/webapp/assets/css/admin/admin-banner-write.css
+++ b/src/main/webapp/assets/css/admin/admin-banner-write.css
@@ -269,6 +269,10 @@ input[type="radio"] {
     width: 20px;
     height: 20px; 
 }
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px; 
+}
 
 button {
     padding: 10px 20px;
