--- a/src/main/webapp/assets/css/myhome/myhome-shipping-list.css
+++ b/src/main/webapp/assets/css/myhome/myhome-shipping-list.css
@@ -189,6 +189,43 @@
 
 
     /* contents */
+    
+ #product-list{
+    display: flex; 
+    flex-direction:column; 
+        justify-content: left;
+    align-items:start;
+    } 
+
+
+#order-container {
+    width: 100%;
+     height: 246px; /* 고정 높이 */
+}
+
+.ordered-product {
+    display: flex;
+    flex-direction: column; /* 세로 방향으로 정렬 */
+    gap: 10px; /* 간격 조절 */
+}
+
+#product-list{
+    overflow-x: hidden; /* 수평 스크롤 숨김 */
+}
+
+
+.product-item {
+    padding: 10px; /* 내부 여백 */
+    display: flex; /* 내부 내용 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
+}
+
+.product-item img {
+    max-width: 200px; /* 이미지 크기 조절 */
+    max-height: 100%; /* 높이에 맞게 조절 */
+    margin-right: 10px; /* 이미지와 텍스트 간격 */
+}
+    
     #delivery-status {
         display: flex;
         flex-direction: row;
@@ -340,9 +377,16 @@
         border-radius: 20px;
         margin-bottom: 27px;
     }
-
-    .status span {
-        padding: 10px;
+    
+  
+    
+    
+    .status button {
+        margin:0 13px 5px;
+        border: 0;
+        background-color: transparent;
+        font-size: 20px;
+        line-height:30px;
     }
 
     .count-status span {
