--- a/src/main/webapp/assets/css/myhome/myhome-list.css
+++ b/src/main/webapp/assets/css/myhome/myhome-list.css
@@ -171,7 +171,7 @@
     #sub {
       display: flex;
       flex-direction: column;
-      padding-top: 20px;
+      padding-top: 40px;
       width: 1440px;
       height: 96px;
       margin: 0 auto;
@@ -219,6 +219,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-top: 93px;
     }
 
     #profile-edit {
@@ -643,7 +644,7 @@
       justify-content: space-between;
       width: 1200px;
       margin: 0 auto;
-      padding: 150px 0 0 0;
+      padding: 300px 0 0 0;
     }
 
     .footer-section {
