--- a/src/main/webapp/assets/css/myhome/myhome-list.css
+++ b/src/main/webapp/assets/css/myhome/myhome-list.css
@@ -219,7 +219,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 93px;
     }
 
     #profile-edit {
@@ -248,6 +247,7 @@
     border: 1px solid #828282;
     }
     
+  
    
       .id {
       font-size: 20px;
@@ -422,13 +422,18 @@
       gap: 70px;
       margin-top: 26px;
     }
+    
+    .edit-info div{
+    	width: 300px;
+    }
 
     .edit-category1 {
       font-size: 16px;
       line-height: 24px;
       font-weight: bold;
-      padding-right: 87px;
+      padding-right: 83px;
     }
+
 
     .edit-category2 {
       font-size: 16px;
