jane trying to pull minc pr

--- a/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
@@ -247,12 +247,13 @@
     }
 
     .title {
-        flex-direction: row;
+        flex-direction: column;
         margin-left: 60px;
         font-weight: bold;
     }
 
-    .title p {
+    .title label {
+    display:block;
         padding-top: 30px;
     }
 
