--- a/src/main/webapp/assets/css/myhome/myhome-pet-list.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-list.css
@@ -184,11 +184,12 @@
 	 .sub {
         display: flex;
         flex-direction: column;
-        padding-top: 20px;
+        padding-top: 40px;
         width: 1440px;
         height: 96px;
         margin: 0 auto;
         font-weight: bold;
+        margin-bottom:50px;
     }
 
     #animals {
