--- a/src/main/webapp/assets/css/admin/admin-coupon-write.css
+++ b/src/main/webapp/assets/css/admin/admin-coupon-write.css
@@ -280,7 +280,7 @@ h1 {
 .label {
 	display: flex;
 	align-items: center;
-	width: 230px;
+	width: 218px;
 	text-align: left;
 	font-weight: bold;
 }
@@ -298,7 +298,7 @@ textarea {
 	height: 80px;
 }
 
-.button-group {
+.change-buttons {
 	width: 100%;
 	display: flex;
 	justify-content: flex-end;
@@ -355,6 +355,16 @@ textarea {
 	margin-top: 15px;
 }
 
+.box1 input[type="number"],
+.custom-discount {
+    width: 464px;
+    height: 55px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+
 textarea {
 	box-sizing: border-box;
 	resize: vertical;
@@ -378,6 +388,7 @@ textarea {
 	flex-direction: row;
 	align-items: center;
 	margin-top: 5px;
+	margin-right: 10px; 
 }
 
 .discount-type .box2 label {
@@ -396,20 +407,30 @@ textarea {
 	margin-top: 20px;
 }
 
-button {
-	margin-top: 10px;
-	padding: 5px 10px;
-}
-
 .box2 {
 	display: flex;
 	flex-direction: row;
 	gap: 10px;
 }
 
+.box2 label {
+    display: flex; 
+    align-items: center;
+}
+
+.box2 > div {
+    display: flex;
+    align-items: center; 
+}
+
+.custom-discount {
+    width: 100px;
+}
+
 .box3 {
 	display: flex;
 	flex-direction: column;
+	gap:5px;
 }
 
 button {
@@ -420,6 +441,3 @@ button {
 	cursor: pointer;
 }
 
-button:hover {
-	background-color: #bbb;
-}
