jane myhome controller edit

--- a/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
@@ -184,8 +184,12 @@
         height: 42px;
         background-color: #1c4da0;
         border-radius: 20px;
-        color: white;
+        color: #ffffff;
         margin-left: 910px;
+    }
+    
+    #submit-button a{
+    	color: #ffffff;
     }
 
     #mydog {
@@ -317,9 +321,6 @@
         /* 패딩 추가 */
         background-color: #f9f9f9;
         /* 배경색 */
-        font-family: Arial, sans-serif;
-        /* 폰트 스타일 */
-        margin-top: 214px;
     }
 
     .footer-black {
@@ -329,9 +330,9 @@
     .footer-container {
         display: flex;
         justify-content: space-between;
-        width: 1200px;
+        width: 1440px;
         margin: 0 auto;
-        padding: 150px 0 0 0;
+        padding: 300px 0 0 0;
     }
 
     .footer-section {
