동물카테고리추가중

--- a/src/main/webapp/assets/css/product/product-bird.css
+++ b/src/main/webapp/assets/css/product/product-bird.css
@@ -255,7 +255,7 @@ body {
 
 .product-wrap #product-all-wrap {
 	display: contents;
-	/* display:none; */
+	display:none;
 }
 
 .product-wrap #feed-wrap {
