--- a/src/main/webapp/assets/css/product/product-list.css
+++ b/src/main/webapp/assets/css/product/product-list.css
@@ -86,7 +86,7 @@ ul > li > div {
   padding-left: 15px; 
 }
 
-ul > li > div > p {
+ul > li > div > a > p {
   margin: 10px 0;
   text-align: left;
   padding-left: 10px; 
