--- a/src/main/webapp/assets/css/seller/seller-revenue-list.css
+++ b/src/main/webapp/assets/css/seller/seller-revenue-list.css
@@ -91,7 +91,7 @@ ul > li > div {
   padding-left: 15px; 
 }
 
-ul > li > div > p {
+ul > li > div > a > p{
   margin: 10px 0;
   text-align: left;
   padding-left: 10px; 
