--- a/src/main/webapp/assets/css/product/product-dog.css
+++ b/src/main/webapp/assets/css/product/product-dog.css
@@ -178,7 +178,8 @@ body {
   /* border: solid 1px black;
   box-sizing: border-box; */
   align-items: left;
-  margin: 0 252px;
+  margin: 0 auto;
+  padding-left: 250px;
 }
 
 
@@ -264,6 +265,16 @@ body {
 }
 
 .product-wrap #toiletries-wrap {
+	display: contents;
+	display:none;
+}
+
+.product-wrap #toy-wrap {
+	display: contents;
+	display:none;
+}
+
+.product-wrap #bb-wrap {
 	display: contents;
 	display:none;
 }
@@ -448,126 +459,128 @@ body {
 /* 푸터영역 */
 
 footer {
-  width: 100%; /* 부모 요소의 너비를 100%로 설정 */
-  padding: 20px; /* 패딩 추가 */
-  background-color: #f9f9f9; /* 배경색 */
-  font-family: Arial, sans-serif; /* 폰트 스타일 */
+	width: 100%; /* 부모 요소의 너비를 100%로 설정 */
+	padding: 20px; /* 패딩 추가 */
+	background-color: #f9f9f9; /* 배경색 */
+	font-family: Arial, sans-serif; /* 폰트 스타일 */
 }
-.footer-black{
-  color: #000;
+
+.footer-black {
+	color: #000;
 }
 
 .footer-container {
-  display: flex;
-  justify-content: space-between;
-  width: 1200px;
-  margin: 0 auto;
-  border-top: 1px solid #E5E5E5;
-  border-bottom: 1px solid #E5E5E5;
-  padding: 20px 0;
+	display: flex;
+	justify-content: space-between;
+	width: 1200px;
+	margin: 0 auto;
+	padding: 20px 0;
 }
 
 .footer-section {
-  margin-bottom: 2px; /* 각 섹션 간의 간격 */
+	margin-bottom: 2px; /* 각 섹션 간의 간격 */
 }
 
 .footer-section h3 {
-  font-size: 18px;
-  margin-bottom: 15px;
+	font-size: 18px;
+	margin-bottom: 15px;
 }
 
 .footer-section p {
-  margin: 10px 0; /* 기본 여백 제거 */
-  line-height: 1.2; /* 줄 간격 조정 */
-  margin: 1px 0;
-  white-space: normal; /* 줄바꿈 허용 */
-  font-size: 11px;
+	margin: 10px 0; /* 기본 여백 제거 */
+	line-height: 1.2; /* 줄 간격 조정 */
+	margin: 1px 0;
+	white-space: normal; /* 줄바꿈 허용 */
+	font-size: 11px;
 }
 
 .footer-section ul {
-  list-style: none; /* 리스트 점 제거 */
-  padding: 0; /* 기본 패딩 제거 */
-  margin: 0; /* 기본 마진 제거 */
-  line-height: 1.8; /* 줄 간격 설정 (1.8은 글자 크기의 180% 간격) */
+	list-style: none; /* 리스트 점 제거 */
+	padding: 0; /* 기본 패딩 제거 */
+	margin: 0; /* 기본 마진 제거 */
+	line-height: 1.8; /* 줄 간격 설정 (1.8은 글자 크기의 180% 간격) */
 }
 
 .footer-section ul li {
-  margin-bottom: 10px; /* 리스트 항목 간격 */
-  font-size: 12px;
+	margin-bottom: 10px; /* 리스트 항목 간격 */
+	font-size: 12px;
 }
 
 .footer-section ul li a {
-  text-decoration: none; /* 링크 밑줄 제거 */
-  color: #000000; /* 텍스트 색상 */
-  font-size: 12px;
+	text-decoration: none; /* 링크 밑줄 제거 */
+	color: #000000; /* 텍스트 색상 */
+	font-size: 12px;
 }
 
 .contact-info {
-  display: flex; /* Flexbox로 가로 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
+	display: flex; /* Flexbox로 가로 정렬 */
+	align-items: center; /* 수직 중앙 정렬 */
 }
 
 .highlight {
-  color: #000000; /* 강조 색상 */
-  font-weight: bold; /* 글자 두껍게 */
-  font-size: 12px; /* 글자 크기 */
+	color: #000000; /* 강조 색상 */
+	font-weight: bold; /* 글자 두껍게 */
+	font-size: 12px; /* 글자 크기 */
 }
+
 .custom-list {
-  list-style-type: none; /* 기본 리스트 스타일 제거 */
+	list-style-type: none; /* 기본 리스트 스타일 제거 */
 }
 
 .custom-list li::before {
-  content: '•'; /* 리스트 앞에 점 추가 */
-  color: #000; /* 점의 색상 */
-  font-weight: bold; /* 점 굵게 */
-  display: inline-block; /* 점을 인라인으로 표시 */
-  width: 13px; /* 점과 텍스트 사이의 간격 조정 */
+	content: '•'; /* 리스트 앞에 점 추가 */
+	color: #000; /* 점의 색상 */
+	font-weight: bold; /* 점 굵게 */
+	display: inline-block; /* 점을 인라인으로 표시 */
+	width: 13px; /* 점과 텍스트 사이의 간격 조정 */
 }
 
 .button-container {
-  display: flex; /* 버튼을 가로로 정렬 */
-  gap: 10px; /* 버튼 사이 간격 */
-  align-items: center; /* 버튼을 텍스트와 수직으로 정렬 *
-  margin-top: 10px; /* 버튼 위쪽 마진 */
+	display: flex; /* 버튼을 가로로 정렬 */
+	gap: 10px; /* 버튼 사이 간격 */
+	align-items: center; /* 버튼을 텍스트와 수직으로 정렬 *
+    margin-top: 10px; /* 버튼 위쪽 마진 */
 }
 
 .kakao-button, .email-button {
-  background-color: #FFFFFF;
-  color: #000000;
-  border: solid #E6E6E6;
-  margin: 3px;
-  margin-bottom: 10px;
-  border-radius: 20px;
-  cursor: pointer;
-  padding: 5px 15px; /* 버튼 내부 여백 */
-  font-size: 11px;
+	background-color: #FFFFFF;
+	color: #000000;
+	border: solid #E6E6E6;
+	margin: 3px;
+	margin-bottom: 10px;
+	border-radius: 20px;
+	cursor: pointer;
+	padding: 5px 15px; /* 버튼 내부 여백 */
+	font-size: 11px;
 }
 
 .kakao-button {
-  width: 211px;
-  height: 29px;
+	width: 211px;
+	height: 29px;
 }
 
 .email-button {
-  width: 93px;
-  height: 29px;
+	width: 94px;
+	height: 29px;
 }
 
 .footer-section {
-  width: 100%; /* 부모 요소의 너비를 100%로 설정 */
-  padding: 10px; /* 패딩 추가 */
-  background-color: #f9f9f9; /* 배경색 */
-  font-family: Arial, sans-serif; /* 폰트 스타일 */
+	width: 100%; /* 부모 요소의 너비를 100%로 설정 */
+	padding: 10px; /* 패딩 추가 */
+	background-color: #f9f9f9; /* 배경색 */
+	font-family: Arial, sans-serif; /* 폰트 스타일 */
 }
 
 .footer-section.legal p {
-  margin: 0; /* 기본 여백 제거 */
-  white-space: nowrap; /* 줄바꿈을 방지합니다. */
-  overflow: visible; /* 텍스트가 부모 요소의 경계를 넘어가도 보이게 합니다. */
+	margin: 0; /* 기본 여백 제거 */
+	white-space: nowrap; /* 줄바꿈을 방지합니다. */
+	overflow: visible; /* 텍스트가 부모 요소의 경계를 넘어가도 보이게 합니다. */
 }
 
 .legal p {
-  font-size: 12px;
-  color: #767676;
-  line-height: 1.5;
+	width:530px;
+	font-size: 12px;
+	color: #767676;
+	line-height: 1.5;
 }
+
