언제할 수 있을까

--- a/src/main/webapp/assets/css/seller/seller-revenue-list.css
+++ b/src/main/webapp/assets/css/seller/seller-revenue-list.css
@@ -238,7 +238,7 @@ table tr {
   justify-content: space-between;
 }
 .tr-border{
-  border-bottom : solid 0.1px #828282;
+  border-top : solid 0.1px #828282;
   height: 70px;
 }
 
