--- a/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-write-bird.css
@@ -80,7 +80,7 @@
         width: 96px;
         height: 32px;
         padding-top:5px;
-        padding-left:14px;
+        padding-left:15px;
     }
 
     .pre-title {
@@ -137,6 +137,7 @@
         justify-content: center;
         align-items: center;
         margin-left: 400px;
+        margin-bottom:187px;
     }
 
     .weight input {
