--- a/src/main/webapp/assets/css/myhome/myhome-pet-write-fish.css
+++ b/src/main/webapp/assets/css/myhome/myhome-pet-write-fish.css
@@ -81,7 +81,7 @@
         width: 96px;
         height: 32px;
         padding-top:5px;
-        padding-left:14px;
+        padding-left:15px;
     }
 
     .pre-title {
@@ -143,6 +143,7 @@
         justify-content: center;
         align-items: center;
         margin-left: 335px;
+        margin-bottom:187px;
     }
 
     .birthday {
