--- a/src/main/webapp/assets/css/member/member-buyer-phone.css
+++ b/src/main/webapp/assets/css/member/member-buyer-phone.css
@@ -71,8 +71,7 @@
 
 /* 전화번호 인증요청 */
 .auth-number-container {
-  display: none; /* 기본적으로 숨김 */
-  margin-top: 10px; /* 간격 추가 */
+  margin-top: 10px; 
  }
 
 /* 회원가입 완료 버튼 */
